# algorithmic-art

./: README.md  main.py  pyproject.toml
notebooks/: samples.ipynb
src/: draw.py  rectangles.py  subdivision.py
