[project]
name = "algorithmic_art"
version = "0.1.0"
description = "Mostly just generates colored rectangles"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "seaborn>=0.13.2",
    "wesanderson>=0.0.3",
]
license = "GPL-3.0-or-later"

[tool.setuptools.packages.find]
where = ["src"]
